fix: RDASH-6362: Update JUnit 5 in SuiteTestEngine module
(cherry picked from commit 051ab24f3ac951f9ef1fe1eb7173679ed2259751)